test/files/neg/bug752.check
bug752.scala:6: error: type mismatch;
 found   : String => Unit
 required: Int => Unit
                f(g _)
                  ^
one error found
